<resources>
    <string name="app_name">MindYourCash</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <!-- MindYourCash Strings -->
    <string name="mindyourcash">MindYourCash</string>
    <string name="register">Register</string>
    <string name="register_fragment_label">Register Fragment</string>
    <string name="accounts_fragment_label">Accounts Fragment</string>
    <string name="purchases_fragment_label">Purchases Fragment</string>
    <string name="pictures_fragment_label">Pictures Fragment</string>
    <string name="line_chart">Line Chart</string>
    <string name="pie_chart">Pie Chart</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="accounts">Accounts</string>
    <string name="addaccount_dialog_title">Add an Account</string>
    <string name="addaccount_dialog_accountname">Account Name</string>
    <string name="addaccount">Add Account</string>
    <string name="purchases">Purchases</string>
    <string name="addpurchase_dialog_title">Add a Purchase</string>
    <string name="addpurchase_dialog_purchasename">Purchase Name</string>
    <string name="addpurchase_dialog_cost">Cost (e.g. 100.00)</string>
    <string name="addpurchase_dialog_date">Date</string>
    <string name="addpurchase">Add Purchase</string>

    <string name="pictures">Pictures</string>
    <string name="takeapicture">Take a Picture</string>

    <string-array name="category_array">
        <item>Category</item>
        <item>Hobbies</item>
        <item>Groceries</item>
        <item>Living</item>
        <item>Work</item>
        <item>Travel</item>
        <item>Education</item>
        <item>Miscellaneous</item>
    </string-array>
</resources>