<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="nu.mad.mindyourcash.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_AccountsFragment"
            app:destination="@id/AccountsFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_RegisterFragment"
            app:destination="@id/RegisterFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_LineChartFragment"
            app:destination="@id/LineChartFragment" />
    </fragment>
    <fragment
        android:id="@+id/RegisterFragment"
        android:name="nu.mad.mindyourcash.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/register_fragment">

        <action
            android:id="@+id/action_RegisterFragment_to_AccountsFragment"
            app:destination="@id/AccountsFragment" />
    </fragment>
    <fragment
        android:id="@+id/AccountsFragment"
        android:name="nu.mad.mindyourcash.AccountsFragment"
        android:label="@string/accounts_fragment_label"
        tools:layout="@layout/accounts_fragment">
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="nu.mad.mindyourcash.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/LineChartFragment"
        android:name="nu.mad.mindyourcash.LineChartFragment"
        android:label="@string/line_chart"
        tools:layout="@layout/fragment_line_chart">
    </fragment>
</navigation>