<!-- https://developer.android.com/guide/topics/ui/dialogs -->
<!-- https://androidexamples.blogspot.com/2015/01/textview-font-size-in-android.html -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/addpurchase_dialog_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/addpurchase_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="4dp"
        android:text="@string/addpurchase_dialog_title"
        android:textSize="14pt" />

    <EditText
        android:id="@+id/addpurchase_dialog_purchasename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/addpurchase_dialog_purchasename" />

    <EditText
        android:id="@+id/addpurchase_dialog_cost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/addpurchase_dialog_cost" />

    <!-- resource: https://developer.android.com/guide/topics/ui/controls/spinner#java-->
    <Spinner
        android:id="@+id/addpurchase_dialog_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp" />

    <!--  resource: https://stackoverflow.com/questions/14933330/datepicker-how-to-popup-datepicker-when-click-on-edittext  -->
    <EditText
        android:id="@+id/addpurchase_dialog_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:clickable="true"
        android:editable="false"
        android:focusable="false"
        android:hint="@string/addpurchase_dialog_date" />
</LinearLayout>
