<?xml version="1.0" encoding="utf-8"?>

<!-- https://stackoverflow.com/questions/28651418/how-to-add-floating-action-button-on-top-of-scrollview -->
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/purchases_coordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg">

    <!-- https://stackoverflow.com/questions/40562344/how-to-add-scroll-in-fragment/43188084#43188084 -->
    <!--    <ScrollView-->
    <!--        android:id="@+id/accounts_scrollview"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="match_parent"-->
    <!--        android:fillViewport="true">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/purchases_constraintlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".PurchasesFragment">

        <!-- resource: https://abhiandroid.com/ui/listview -->

        <TextView
            android:id="@+id/purchases_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="172dp"
            android:layout_marginTop="168dp"
            android:text="@string/purchases"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/purchases_pictures_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="36dp"
            android:layout_marginBottom="48dp"
            android:text="@string/pictures"
            app:layout_constraintBottom_toTopOf="@+id/purchases_textview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <ListView
            android:id="@+id/purchases_listview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:divider="#000000"
            android:dividerHeight="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/purchases_textview" />

        <Button
            android:id="@+id/pie_chart_accounts_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="124dp"
            android:text="@string/pie_chart"
            app:layout_constraintBottom_toTopOf="@+id/purchases_textview"
            app:layout_constraintEnd_toStartOf="@+id/purchases_pictures_button"
            app:layout_constraintHorizontal_bias="0.555"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.603" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    </ScrollView>-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/purchases_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@android:drawable/ic_input_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>